Jaeksoft Open Search Server
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

Open Search Server 1.1.1

Bug fixes
- 2886651: Default operator is not preserved when saving query
- 2886645: Issue with lemmatisation using the web crawler

Open Search Server 1.1

New features
- 2882224: Stress test for insertion
- 2881642: Set maximum number of segments for index optimization
- 2865088: Add default parser for web and file crawler
- 2864468: Indexation plugin within web crawler
- 2855049: Add a description for parsers
- 2854421: Added Romanian, Turkish and Danish support
- 2848588: Robots.txt view on web crawler
- 2847820: Add Russian and Chinese language support
- 2846159: Replace textfield by a menu for langage selection
- 2843516: Sort field list by alphabetic order
- 2843182: Use the library apache commons.io
- 2836913: Return the rows parameter in the search API result
- 2833103: Remove XML/HTML tag on XML upload
- 2826651: Synonyms support
- 2828734: Add Spellchecker ability
- 2812808: Management of several indices
- 2818592: Unique field and default field set up
- 2818075: OpenDocument Format support
- 2816562: New data directory in package
- 2816561: Upgrade documentation for 1.1
- 2813996: Add schema tab panel to manager analyzer and fields

Bug fixes
- 2882223: Error when inserting with concurrent access
- 2881248: Web crawler does not follow redirection for robots.txt
- 2881227: Wrong encoding detection on web crawler
- 2881141: Can add fields in the schema for any type of index
- 2880577: Web crawler doesn't follow redirections correctly
- 2873319: Facets pagination in the interface doesn't work
- 2872576: Add a web pattern api
- 2863639: Prefix query changes term to lowercase
- 2859658: Tab Crawler / Web doesn't change when switching index
- 2856869: NPE Exception when field query is empty
- 2855999: Web page title parsing issue